fixed portfolio hover details on mobile

--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -60,8 +60,27 @@
         transform: translateY(100%);
         transition: opacity 0.3s ease, transform 0.3s ease;
         text-align: center;
+        h3 {
+            font-size: 1.2rem;
+            @media (min-width: 64rem) {
+                font-size: 2rem;
+            }
+        }
         p {
             font-size: 1rem;
+            @media (min-width: 64rem) {
+                font-size: 0.8rem;
+            }
+            @media (max-width:55rem) {
+                display: none;
+            }
+        }
+        a {
+            font-size: 1rem;
+            padding: 0.5rem;
+            @media (min-width: 64rem) {
+                font-size: 0.8rem;
+            }
         }
     }
 }
